[metadata]
name = AutoSMX
description = GUI Automater for SMX
author = Samir Gupta
platforms = unix, linux, osx, cygwin, win32
classifiers =
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11

[options]
packages =
    design
    pages
    popups
    gui
    storage
python_requires = >=3.10
package_dir =
    =src
zip_safe = no

[options.extras_require]
testing = 
    pytest>=7.0
    pytest-cov>=4.0
    mypy>=1.0
    black>=22.10
    tox>=4.8

[options.package_data]
design = py.typed
pages = py.typed
popups = py.typed
gui = py.typed
storage = py.typed